# mandrii

./: .gitignore  .lintstagedrc.base.mjs  .lintstagedrc.mjs  .prettierignore  .stylelintignore  COMPLETED.md  COMPREHENSIVE_EVENT_FEATURE_REVIEW.md  DECISIONS.md  EVENT_FEATURE_ANALYSIS.md  LICENSE  PLANNING.md  README.md  TASK.md  eslint.config.mjs  lighthouserc.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts  sonar-project.properties  stylelint.config.mjs  tsconfig.base.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: bundle_analysis.yml  codeclimate.yml  lighthouse.yml  playwright.yml  pull_request_template.md  sonarqube.yml
.husky/: pre-commit  pre-push
apps/services/: Dockerfile  Makefile  lintstagedrc.mjs  package.json  pyproject.toml
apps/services/src/: main.py
apps/web/: .lintstagedrc.mjs  codegen.yml  eslint.config.mjs  lighthouserc.js  next.config.mjs  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  stylelint.config.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
ci/lighthouse/: budget.json  lighthouserc.json
docs/: backend-api-error-handling-improvements.md  form-utilities-refactoring.md  ticket-learnings.md  venue-cards-refactoring.md  venue-metadata-architecture.md
hasura/: MIGRATION_GUIDE.md
hasura/preview/: .env.example  config.yaml
scripts/: normalize-translation-keys.mjs
src/: instrumentation-client.ts  instrumentation.ts  middleware.ts
tickets/: README.md
translations/: messages.pot  uk.json
(+1011 files in other folders)
